// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch Basic render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 1rem;
}

.c1 {
  font-size: calc(1rem * 1);
  background-color: hsla(215,20%,65%,1);
  box-shadow: 0.02em 0.02em 0.05em hsla(215,16%,47%,1) inset, -0.02em -0.02em 0.05em hsla(215,16%,47%,1) inset;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  width: 2em;
  height: 1.2em;
  border-radius: 9999px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  -webkit-transition: all 0.2s cubic-bezier(0,0,0,0.1);
  transition: all 0.2s cubic-bezier(0,0,0,0.1);
}

.c1::after {
  position: absolute;
  content: '';
  width: 1.2em;
  height: 1.2em;
  border-radius: 50%;
  -webkit-transform: scale(80%);
  -ms-transform: scale(80%);
  transform: scale(80%);
  box-shadow: 0 0 0 1px hsla(0,0%,0%,0.1),0 4px 0px 0 hsla(0,0%,0%,0.04),0 4px 9px hsla(0,0%,0%,0.13), 0 3px 3px hsla(0,0%,0%,0.05);
  -webkit-transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  background-color: hsla(210,40%,96%,1);
  left: 0;
}

<body>
    <div>
      <div
        class="c0"
        role="switch"
      >
        <input
          class="c1"
          type="checkbox"
        />
      </div>
    </div>
  </body>,
  "container": .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 1rem;
}

.c1 {
  font-size: calc(1rem * 1);
  background-color: hsla(215,20%,65%,1);
  box-shadow: 0.02em 0.02em 0.05em hsla(215,16%,47%,1) inset, -0.02em -0.02em 0.05em hsla(215,16%,47%,1) inset;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  width: 2em;
  height: 1.2em;
  border-radius: 9999px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  -webkit-transition: all 0.2s cubic-bezier(0,0,0,0.1);
  transition: all 0.2s cubic-bezier(0,0,0,0.1);
}

.c1::after {
  position: absolute;
  content: '';
  width: 1.2em;
  height: 1.2em;
  border-radius: 50%;
  -webkit-transform: scale(80%);
  -ms-transform: scale(80%);
  transform: scale(80%);
  box-shadow: 0 0 0 1px hsla(0,0%,0%,0.1),0 4px 0px 0 hsla(0,0%,0%,0.04),0 4px 9px hsla(0,0%,0%,0.13), 0 3px 3px hsla(0,0%,0%,0.05);
  -webkit-transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  background-color: hsla(210,40%,96%,1);
  left: 0;
}

<div>
    <div
      class="c0"
      role="switch"
    >
      <input
        class="c1"
        type="checkbox"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Switch Dark mode basic render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 1rem;
}

.c1 {
  font-size: calc(1rem * 1);
  background-color: hsla(215,19%,35%,1);
  box-shadow: 0.02em 0.02em 0.05em hsla(215,25%,27%,1) inset, -0.02em -0.02em 0.05em hsla(215,25%,27%,1) inset;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  width: 2em;
  height: 1.2em;
  border-radius: 9999px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  -webkit-transition: all 0.2s cubic-bezier(0,0,0,0.1);
  transition: all 0.2s cubic-bezier(0,0,0,0.1);
}

.c1::after {
  position: absolute;
  content: '';
  width: 1.2em;
  height: 1.2em;
  border-radius: 50%;
  -webkit-transform: scale(80%);
  -ms-transform: scale(80%);
  transform: scale(80%);
  box-shadow: 0 0 0 1px hsla(0,0%,0%,0.1),0 4px 0px 0 hsla(0,0%,0%,0.04),0 4px 9px hsla(0,0%,0%,0.13), 0 3px 3px hsla(0,0%,0%,0.05);
  -webkit-transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  background-color: hsla(217,33%,17%,1);
  left: 0;
}

<body>
    <div>
      <div
        class="c0"
        role="switch"
      >
        <input
          class="c1"
          type="checkbox"
        />
      </div>
    </div>
  </body>,
  "container": .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 1rem;
}

.c1 {
  font-size: calc(1rem * 1);
  background-color: hsla(215,19%,35%,1);
  box-shadow: 0.02em 0.02em 0.05em hsla(215,25%,27%,1) inset, -0.02em -0.02em 0.05em hsla(215,25%,27%,1) inset;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  width: 2em;
  height: 1.2em;
  border-radius: 9999px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  -webkit-transition: all 0.2s cubic-bezier(0,0,0,0.1);
  transition: all 0.2s cubic-bezier(0,0,0,0.1);
}

.c1::after {
  position: absolute;
  content: '';
  width: 1.2em;
  height: 1.2em;
  border-radius: 50%;
  -webkit-transform: scale(80%);
  -ms-transform: scale(80%);
  transform: scale(80%);
  box-shadow: 0 0 0 1px hsla(0,0%,0%,0.1),0 4px 0px 0 hsla(0,0%,0%,0.04),0 4px 9px hsla(0,0%,0%,0.13), 0 3px 3px hsla(0,0%,0%,0.05);
  -webkit-transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  background-color: hsla(217,33%,17%,1);
  left: 0;
}

<div>
    <div
      class="c0"
      role="switch"
    >
      <input
        class="c1"
        type="checkbox"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Switch Girths 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 1rem;
}

.c1 {
  font-size: calc(1rem * 1);
  background-color: hsla(217,91%,60%,1);
  box-shadow: 0.02em 0.02em 0.05em hsla(221,83%,53%,1) inset, -0.02em -0.02em 0.05em hsla(221,83%,53%,1) inset;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  width: 2em;
  height: 1.2em;
  border-radius: 9999px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  -webkit-transition: all 0.2s cubic-bezier(0,0,0,0.1);
  transition: all 0.2s cubic-bezier(0,0,0,0.1);
}

.c1::after {
  position: absolute;
  content: '';
  width: 1.2em;
  height: 1.2em;
  border-radius: 50%;
  -webkit-transform: scale(80%);
  -ms-transform: scale(80%);
  transform: scale(80%);
  box-shadow: 0 0 0 1px hsla(0,0%,0%,0.1),0 4px 0px 0 hsla(0,0%,0%,0.04),0 4px 9px hsla(0,0%,0%,0.13), 0 3px 3px hsla(0,0%,0%,0.05);
  -webkit-transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  background-color: hsla(210,40%,96%,1);
  left: calc(100% - 1.2em);
}

.c2 {
  font-size: calc(1rem * 1.5);
  background-color: hsla(217,91%,60%,1);
  box-shadow: 0.02em 0.02em 0.05em hsla(221,83%,53%,1) inset, -0.02em -0.02em 0.05em hsla(221,83%,53%,1) inset;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  width: 2em;
  height: 1.2em;
  border-radius: 9999px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  -webkit-transition: all 0.2s cubic-bezier(0,0,0,0.1);
  transition: all 0.2s cubic-bezier(0,0,0,0.1);
}

.c2::after {
  position: absolute;
  content: '';
  width: 1.2em;
  height: 1.2em;
  border-radius: 50%;
  -webkit-transform: scale(80%);
  -ms-transform: scale(80%);
  transform: scale(80%);
  box-shadow: 0 0 0 1px hsla(0,0%,0%,0.1),0 4px 0px 0 hsla(0,0%,0%,0.04),0 4px 9px hsla(0,0%,0%,0.13), 0 3px 3px hsla(0,0%,0%,0.05);
  -webkit-transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  background-color: hsla(210,40%,96%,1);
  left: calc(100% - 1.2em);
}

.c3 {
  font-size: calc(1rem * 2);
  background-color: hsla(217,91%,60%,1);
  box-shadow: 0.02em 0.02em 0.05em hsla(221,83%,53%,1) inset, -0.02em -0.02em 0.05em hsla(221,83%,53%,1) inset;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  width: 2em;
  height: 1.2em;
  border-radius: 9999px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  -webkit-transition: all 0.2s cubic-bezier(0,0,0,0.1);
  transition: all 0.2s cubic-bezier(0,0,0,0.1);
}

.c3::after {
  position: absolute;
  content: '';
  width: 1.2em;
  height: 1.2em;
  border-radius: 50%;
  -webkit-transform: scale(80%);
  -ms-transform: scale(80%);
  transform: scale(80%);
  box-shadow: 0 0 0 1px hsla(0,0%,0%,0.1),0 4px 0px 0 hsla(0,0%,0%,0.04),0 4px 9px hsla(0,0%,0%,0.13), 0 3px 3px hsla(0,0%,0%,0.05);
  -webkit-transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  background-color: hsla(210,40%,96%,1);
  left: calc(100% - 1.2em);
}

.c4 {
  font-size: calc(1rem * 2.5);
  background-color: hsla(217,91%,60%,1);
  box-shadow: 0.02em 0.02em 0.05em hsla(221,83%,53%,1) inset, -0.02em -0.02em 0.05em hsla(221,83%,53%,1) inset;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  width: 2em;
  height: 1.2em;
  border-radius: 9999px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  -webkit-transition: all 0.2s cubic-bezier(0,0,0,0.1);
  transition: all 0.2s cubic-bezier(0,0,0,0.1);
}

.c4::after {
  position: absolute;
  content: '';
  width: 1.2em;
  height: 1.2em;
  border-radius: 50%;
  -webkit-transform: scale(80%);
  -ms-transform: scale(80%);
  transform: scale(80%);
  box-shadow: 0 0 0 1px hsla(0,0%,0%,0.1),0 4px 0px 0 hsla(0,0%,0%,0.04),0 4px 9px hsla(0,0%,0%,0.13), 0 3px 3px hsla(0,0%,0%,0.05);
  -webkit-transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  background-color: hsla(210,40%,96%,1);
  left: calc(100% - 1.2em);
}

<body>
    <div>
      <div
        class="c0"
        role="switch"
      >
        <input
          checked=""
          class="c1"
          type="checkbox"
        />
      </div>
      <div
        class="c0"
        role="switch"
      >
        <input
          checked=""
          class="c2"
          type="checkbox"
        />
      </div>
      <div
        class="c0"
        role="switch"
      >
        <input
          checked=""
          class="c3"
          type="checkbox"
        />
      </div>
      <div
        class="c0"
        role="switch"
      >
        <input
          checked=""
          class="c4"
          type="checkbox"
        />
      </div>
    </div>
  </body>,
  "container": .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 1rem;
}

.c1 {
  font-size: calc(1rem * 1);
  background-color: hsla(217,91%,60%,1);
  box-shadow: 0.02em 0.02em 0.05em hsla(221,83%,53%,1) inset, -0.02em -0.02em 0.05em hsla(221,83%,53%,1) inset;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  width: 2em;
  height: 1.2em;
  border-radius: 9999px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  -webkit-transition: all 0.2s cubic-bezier(0,0,0,0.1);
  transition: all 0.2s cubic-bezier(0,0,0,0.1);
}

.c1::after {
  position: absolute;
  content: '';
  width: 1.2em;
  height: 1.2em;
  border-radius: 50%;
  -webkit-transform: scale(80%);
  -ms-transform: scale(80%);
  transform: scale(80%);
  box-shadow: 0 0 0 1px hsla(0,0%,0%,0.1),0 4px 0px 0 hsla(0,0%,0%,0.04),0 4px 9px hsla(0,0%,0%,0.13), 0 3px 3px hsla(0,0%,0%,0.05);
  -webkit-transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  background-color: hsla(210,40%,96%,1);
  left: calc(100% - 1.2em);
}

.c2 {
  font-size: calc(1rem * 1.5);
  background-color: hsla(217,91%,60%,1);
  box-shadow: 0.02em 0.02em 0.05em hsla(221,83%,53%,1) inset, -0.02em -0.02em 0.05em hsla(221,83%,53%,1) inset;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  width: 2em;
  height: 1.2em;
  border-radius: 9999px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  -webkit-transition: all 0.2s cubic-bezier(0,0,0,0.1);
  transition: all 0.2s cubic-bezier(0,0,0,0.1);
}

.c2::after {
  position: absolute;
  content: '';
  width: 1.2em;
  height: 1.2em;
  border-radius: 50%;
  -webkit-transform: scale(80%);
  -ms-transform: scale(80%);
  transform: scale(80%);
  box-shadow: 0 0 0 1px hsla(0,0%,0%,0.1),0 4px 0px 0 hsla(0,0%,0%,0.04),0 4px 9px hsla(0,0%,0%,0.13), 0 3px 3px hsla(0,0%,0%,0.05);
  -webkit-transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  background-color: hsla(210,40%,96%,1);
  left: calc(100% - 1.2em);
}

.c3 {
  font-size: calc(1rem * 2);
  background-color: hsla(217,91%,60%,1);
  box-shadow: 0.02em 0.02em 0.05em hsla(221,83%,53%,1) inset, -0.02em -0.02em 0.05em hsla(221,83%,53%,1) inset;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  width: 2em;
  height: 1.2em;
  border-radius: 9999px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  -webkit-transition: all 0.2s cubic-bezier(0,0,0,0.1);
  transition: all 0.2s cubic-bezier(0,0,0,0.1);
}

.c3::after {
  position: absolute;
  content: '';
  width: 1.2em;
  height: 1.2em;
  border-radius: 50%;
  -webkit-transform: scale(80%);
  -ms-transform: scale(80%);
  transform: scale(80%);
  box-shadow: 0 0 0 1px hsla(0,0%,0%,0.1),0 4px 0px 0 hsla(0,0%,0%,0.04),0 4px 9px hsla(0,0%,0%,0.13), 0 3px 3px hsla(0,0%,0%,0.05);
  -webkit-transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  background-color: hsla(210,40%,96%,1);
  left: calc(100% - 1.2em);
}

.c4 {
  font-size: calc(1rem * 2.5);
  background-color: hsla(217,91%,60%,1);
  box-shadow: 0.02em 0.02em 0.05em hsla(221,83%,53%,1) inset, -0.02em -0.02em 0.05em hsla(221,83%,53%,1) inset;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  width: 2em;
  height: 1.2em;
  border-radius: 9999px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  -webkit-transition: all 0.2s cubic-bezier(0,0,0,0.1);
  transition: all 0.2s cubic-bezier(0,0,0,0.1);
}

.c4::after {
  position: absolute;
  content: '';
  width: 1.2em;
  height: 1.2em;
  border-radius: 50%;
  -webkit-transform: scale(80%);
  -ms-transform: scale(80%);
  transform: scale(80%);
  box-shadow: 0 0 0 1px hsla(0,0%,0%,0.1),0 4px 0px 0 hsla(0,0%,0%,0.04),0 4px 9px hsla(0,0%,0%,0.13), 0 3px 3px hsla(0,0%,0%,0.05);
  -webkit-transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  background-color: hsla(210,40%,96%,1);
  left: calc(100% - 1.2em);
}

<div>
    <div
      class="c0"
      role="switch"
    >
      <input
        checked=""
        class="c1"
        type="checkbox"
      />
    </div>
    <div
      class="c0"
      role="switch"
    >
      <input
        checked=""
        class="c2"
        type="checkbox"
      />
    </div>
    <div
      class="c0"
      role="switch"
    >
      <input
        checked=""
        class="c3"
        type="checkbox"
      />
    </div>
    <div
      class="c0"
      role="switch"
    >
      <input
        checked=""
        class="c4"
        type="checkbox"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Switch Status 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 1rem;
}

.c1 {
  font-size: calc(1rem * 1);
  background-color: hsla(217,91%,60%,1);
  box-shadow: 0.02em 0.02em 0.05em hsla(221,83%,53%,1) inset, -0.02em -0.02em 0.05em hsla(221,83%,53%,1) inset;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  width: 2em;
  height: 1.2em;
  border-radius: 9999px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  -webkit-transition: all 0.2s cubic-bezier(0,0,0,0.1);
  transition: all 0.2s cubic-bezier(0,0,0,0.1);
}

.c1::after {
  position: absolute;
  content: '';
  width: 1.2em;
  height: 1.2em;
  border-radius: 50%;
  -webkit-transform: scale(80%);
  -ms-transform: scale(80%);
  transform: scale(80%);
  box-shadow: 0 0 0 1px hsla(0,0%,0%,0.1),0 4px 0px 0 hsla(0,0%,0%,0.04),0 4px 9px hsla(0,0%,0%,0.13), 0 3px 3px hsla(0,0%,0%,0.05);
  -webkit-transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  background-color: hsla(210,40%,96%,1);
  left: calc(100% - 1.2em);
}

.c2 {
  font-size: calc(1rem * 1);
  background-color: hsla(142,71%,45%,1);
  box-shadow: 0.02em 0.02em 0.05em hsla(142,76%,36%,1) inset, -0.02em -0.02em 0.05em hsla(142,76%,36%,1) inset;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  width: 2em;
  height: 1.2em;
  border-radius: 9999px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  -webkit-transition: all 0.2s cubic-bezier(0,0,0,0.1);
  transition: all 0.2s cubic-bezier(0,0,0,0.1);
}

.c2::after {
  position: absolute;
  content: '';
  width: 1.2em;
  height: 1.2em;
  border-radius: 50%;
  -webkit-transform: scale(80%);
  -ms-transform: scale(80%);
  transform: scale(80%);
  box-shadow: 0 0 0 1px hsla(0,0%,0%,0.1),0 4px 0px 0 hsla(0,0%,0%,0.04),0 4px 9px hsla(0,0%,0%,0.13), 0 3px 3px hsla(0,0%,0%,0.05);
  -webkit-transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  background-color: hsla(210,40%,96%,1);
  left: calc(100% - 1.2em);
}

.c3 {
  font-size: calc(1rem * 1);
  background-color: hsla(38,92%,50%,1);
  box-shadow: 0.02em 0.02em 0.05em hsla(32,95%,44%,1) inset, -0.02em -0.02em 0.05em hsla(32,95%,44%,1) inset;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  width: 2em;
  height: 1.2em;
  border-radius: 9999px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  -webkit-transition: all 0.2s cubic-bezier(0,0,0,0.1);
  transition: all 0.2s cubic-bezier(0,0,0,0.1);
}

.c3::after {
  position: absolute;
  content: '';
  width: 1.2em;
  height: 1.2em;
  border-radius: 50%;
  -webkit-transform: scale(80%);
  -ms-transform: scale(80%);
  transform: scale(80%);
  box-shadow: 0 0 0 1px hsla(0,0%,0%,0.1),0 4px 0px 0 hsla(0,0%,0%,0.04),0 4px 9px hsla(0,0%,0%,0.13), 0 3px 3px hsla(0,0%,0%,0.05);
  -webkit-transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  background-color: hsla(210,40%,96%,1);
  left: calc(100% - 1.2em);
}

.c4 {
  font-size: calc(1rem * 1);
  background-color: hsla(0,84%,60%,1);
  box-shadow: 0.02em 0.02em 0.05em hsla(0,72%,51%,1) inset, -0.02em -0.02em 0.05em hsla(0,72%,51%,1) inset;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  width: 2em;
  height: 1.2em;
  border-radius: 9999px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  -webkit-transition: all 0.2s cubic-bezier(0,0,0,0.1);
  transition: all 0.2s cubic-bezier(0,0,0,0.1);
}

.c4::after {
  position: absolute;
  content: '';
  width: 1.2em;
  height: 1.2em;
  border-radius: 50%;
  -webkit-transform: scale(80%);
  -ms-transform: scale(80%);
  transform: scale(80%);
  box-shadow: 0 0 0 1px hsla(0,0%,0%,0.1),0 4px 0px 0 hsla(0,0%,0%,0.04),0 4px 9px hsla(0,0%,0%,0.13), 0 3px 3px hsla(0,0%,0%,0.05);
  -webkit-transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  background-color: hsla(210,40%,96%,1);
  left: calc(100% - 1.2em);
}

<body>
    <div>
      <div
        class="c0"
        role="switch"
      >
        info
         choice
        <input
          checked=""
          class="c1"
          type="checkbox"
        />
      </div>
      <div
        class="c0"
        role="switch"
      >
        success
         choice
        <input
          checked=""
          class="c2"
          type="checkbox"
        />
      </div>
      <div
        class="c0"
        role="switch"
      >
        warning
         choice
        <input
          checked=""
          class="c3"
          type="checkbox"
        />
      </div>
      <div
        class="c0"
        role="switch"
      >
        danger
         choice
        <input
          checked=""
          class="c4"
          type="checkbox"
        />
      </div>
    </div>
  </body>,
  "container": .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 1rem;
}

.c1 {
  font-size: calc(1rem * 1);
  background-color: hsla(217,91%,60%,1);
  box-shadow: 0.02em 0.02em 0.05em hsla(221,83%,53%,1) inset, -0.02em -0.02em 0.05em hsla(221,83%,53%,1) inset;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  width: 2em;
  height: 1.2em;
  border-radius: 9999px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  -webkit-transition: all 0.2s cubic-bezier(0,0,0,0.1);
  transition: all 0.2s cubic-bezier(0,0,0,0.1);
}

.c1::after {
  position: absolute;
  content: '';
  width: 1.2em;
  height: 1.2em;
  border-radius: 50%;
  -webkit-transform: scale(80%);
  -ms-transform: scale(80%);
  transform: scale(80%);
  box-shadow: 0 0 0 1px hsla(0,0%,0%,0.1),0 4px 0px 0 hsla(0,0%,0%,0.04),0 4px 9px hsla(0,0%,0%,0.13), 0 3px 3px hsla(0,0%,0%,0.05);
  -webkit-transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  background-color: hsla(210,40%,96%,1);
  left: calc(100% - 1.2em);
}

.c2 {
  font-size: calc(1rem * 1);
  background-color: hsla(142,71%,45%,1);
  box-shadow: 0.02em 0.02em 0.05em hsla(142,76%,36%,1) inset, -0.02em -0.02em 0.05em hsla(142,76%,36%,1) inset;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  width: 2em;
  height: 1.2em;
  border-radius: 9999px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  -webkit-transition: all 0.2s cubic-bezier(0,0,0,0.1);
  transition: all 0.2s cubic-bezier(0,0,0,0.1);
}

.c2::after {
  position: absolute;
  content: '';
  width: 1.2em;
  height: 1.2em;
  border-radius: 50%;
  -webkit-transform: scale(80%);
  -ms-transform: scale(80%);
  transform: scale(80%);
  box-shadow: 0 0 0 1px hsla(0,0%,0%,0.1),0 4px 0px 0 hsla(0,0%,0%,0.04),0 4px 9px hsla(0,0%,0%,0.13), 0 3px 3px hsla(0,0%,0%,0.05);
  -webkit-transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  background-color: hsla(210,40%,96%,1);
  left: calc(100% - 1.2em);
}

.c3 {
  font-size: calc(1rem * 1);
  background-color: hsla(38,92%,50%,1);
  box-shadow: 0.02em 0.02em 0.05em hsla(32,95%,44%,1) inset, -0.02em -0.02em 0.05em hsla(32,95%,44%,1) inset;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  width: 2em;
  height: 1.2em;
  border-radius: 9999px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  -webkit-transition: all 0.2s cubic-bezier(0,0,0,0.1);
  transition: all 0.2s cubic-bezier(0,0,0,0.1);
}

.c3::after {
  position: absolute;
  content: '';
  width: 1.2em;
  height: 1.2em;
  border-radius: 50%;
  -webkit-transform: scale(80%);
  -ms-transform: scale(80%);
  transform: scale(80%);
  box-shadow: 0 0 0 1px hsla(0,0%,0%,0.1),0 4px 0px 0 hsla(0,0%,0%,0.04),0 4px 9px hsla(0,0%,0%,0.13), 0 3px 3px hsla(0,0%,0%,0.05);
  -webkit-transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  background-color: hsla(210,40%,96%,1);
  left: calc(100% - 1.2em);
}

.c4 {
  font-size: calc(1rem * 1);
  background-color: hsla(0,84%,60%,1);
  box-shadow: 0.02em 0.02em 0.05em hsla(0,72%,51%,1) inset, -0.02em -0.02em 0.05em hsla(0,72%,51%,1) inset;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  width: 2em;
  height: 1.2em;
  border-radius: 9999px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  -webkit-transition: all 0.2s cubic-bezier(0,0,0,0.1);
  transition: all 0.2s cubic-bezier(0,0,0,0.1);
}

.c4::after {
  position: absolute;
  content: '';
  width: 1.2em;
  height: 1.2em;
  border-radius: 50%;
  -webkit-transform: scale(80%);
  -ms-transform: scale(80%);
  transform: scale(80%);
  box-shadow: 0 0 0 1px hsla(0,0%,0%,0.1),0 4px 0px 0 hsla(0,0%,0%,0.04),0 4px 9px hsla(0,0%,0%,0.13), 0 3px 3px hsla(0,0%,0%,0.05);
  -webkit-transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  background-color: hsla(210,40%,96%,1);
  left: calc(100% - 1.2em);
}

<div>
    <div
      class="c0"
      role="switch"
    >
      info
       choice
      <input
        checked=""
        class="c1"
        type="checkbox"
      />
    </div>
    <div
      class="c0"
      role="switch"
    >
      success
       choice
      <input
        checked=""
        class="c2"
        type="checkbox"
      />
    </div>
    <div
      class="c0"
      role="switch"
    >
      warning
       choice
      <input
        checked=""
        class="c3"
        type="checkbox"
      />
    </div>
    <div
      class="c0"
      role="switch"
    >
      danger
       choice
      <input
        checked=""
        class="c4"
        type="checkbox"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Switch With custom label 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 1rem;
}

.c1 {
  font-size: calc(1rem * 1);
  background-color: hsla(215,20%,65%,1);
  box-shadow: 0.02em 0.02em 0.05em hsla(215,16%,47%,1) inset, -0.02em -0.02em 0.05em hsla(215,16%,47%,1) inset;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  width: 2em;
  height: 1.2em;
  border-radius: 9999px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  -webkit-transition: all 0.2s cubic-bezier(0,0,0,0.1);
  transition: all 0.2s cubic-bezier(0,0,0,0.1);
}

.c1::after {
  position: absolute;
  content: '';
  width: 1.2em;
  height: 1.2em;
  border-radius: 50%;
  -webkit-transform: scale(80%);
  -ms-transform: scale(80%);
  transform: scale(80%);
  box-shadow: 0 0 0 1px hsla(0,0%,0%,0.1),0 4px 0px 0 hsla(0,0%,0%,0.04),0 4px 9px hsla(0,0%,0%,0.13), 0 3px 3px hsla(0,0%,0%,0.05);
  -webkit-transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  background-color: hsla(210,40%,96%,1);
  left: 0;
}

<body>
    <div>
      <div
        class="c0"
        role="switch"
      >
        <div />
        <input
          class="c1"
          type="checkbox"
        />
      </div>
    </div>
  </body>,
  "container": .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 1rem;
}

.c1 {
  font-size: calc(1rem * 1);
  background-color: hsla(215,20%,65%,1);
  box-shadow: 0.02em 0.02em 0.05em hsla(215,16%,47%,1) inset, -0.02em -0.02em 0.05em hsla(215,16%,47%,1) inset;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  width: 2em;
  height: 1.2em;
  border-radius: 9999px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  -webkit-transition: all 0.2s cubic-bezier(0,0,0,0.1);
  transition: all 0.2s cubic-bezier(0,0,0,0.1);
}

.c1::after {
  position: absolute;
  content: '';
  width: 1.2em;
  height: 1.2em;
  border-radius: 50%;
  -webkit-transform: scale(80%);
  -ms-transform: scale(80%);
  transform: scale(80%);
  box-shadow: 0 0 0 1px hsla(0,0%,0%,0.1),0 4px 0px 0 hsla(0,0%,0%,0.04),0 4px 9px hsla(0,0%,0%,0.13), 0 3px 3px hsla(0,0%,0%,0.05);
  -webkit-transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  background-color: hsla(210,40%,96%,1);
  left: 0;
}

<div>
    <div
      class="c0"
      role="switch"
    >
      <div />
      <input
        class="c1"
        type="checkbox"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Switch With label 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 1rem;
}

.c1 {
  font-size: calc(1rem * 1);
  background-color: hsla(215,20%,65%,1);
  box-shadow: 0.02em 0.02em 0.05em hsla(215,16%,47%,1) inset, -0.02em -0.02em 0.05em hsla(215,16%,47%,1) inset;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  width: 2em;
  height: 1.2em;
  border-radius: 9999px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  -webkit-transition: all 0.2s cubic-bezier(0,0,0,0.1);
  transition: all 0.2s cubic-bezier(0,0,0,0.1);
}

.c1::after {
  position: absolute;
  content: '';
  width: 1.2em;
  height: 1.2em;
  border-radius: 50%;
  -webkit-transform: scale(80%);
  -ms-transform: scale(80%);
  transform: scale(80%);
  box-shadow: 0 0 0 1px hsla(0,0%,0%,0.1),0 4px 0px 0 hsla(0,0%,0%,0.04),0 4px 9px hsla(0,0%,0%,0.13), 0 3px 3px hsla(0,0%,0%,0.05);
  -webkit-transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  background-color: hsla(210,40%,96%,1);
  left: 0;
}

<body>
    <div>
      <div
        class="c0"
        role="switch"
      >
        Label
        <input
          class="c1"
          type="checkbox"
        />
      </div>
    </div>
  </body>,
  "container": .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 1rem;
}

.c1 {
  font-size: calc(1rem * 1);
  background-color: hsla(215,20%,65%,1);
  box-shadow: 0.02em 0.02em 0.05em hsla(215,16%,47%,1) inset, -0.02em -0.02em 0.05em hsla(215,16%,47%,1) inset;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  width: 2em;
  height: 1.2em;
  border-radius: 9999px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  -webkit-transition: all 0.2s cubic-bezier(0,0,0,0.1);
  transition: all 0.2s cubic-bezier(0,0,0,0.1);
}

.c1::after {
  position: absolute;
  content: '';
  width: 1.2em;
  height: 1.2em;
  border-radius: 50%;
  -webkit-transform: scale(80%);
  -ms-transform: scale(80%);
  transform: scale(80%);
  box-shadow: 0 0 0 1px hsla(0,0%,0%,0.1),0 4px 0px 0 hsla(0,0%,0%,0.04),0 4px 9px hsla(0,0%,0%,0.13), 0 3px 3px hsla(0,0%,0%,0.05);
  -webkit-transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  transition: left 200ms cubic-bezier(0.54,1.6,0.5,1);
  background-color: hsla(210,40%,96%,1);
  left: 0;
}

<div>
    <div
      class="c0"
      role="switch"
    >
      Label
      <input
        class="c1"
        type="checkbox"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
